--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 # Ahora toca indicar cual es nuestro servidor de Eureka
 # Hacemos esta configuracion si es que el servidore de eureka esta en una ubicacion distinta al servicio
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Zipkin: Modifamos la probabilidad por defecto que es 0.1 a 1 para que envie siempre las trazas en cada request
+# ruta por default de zipkin http://localhost:9411/
+spring.sleuth.sampler.probability=1.0
